# d2q9

./: .gitignore  CMakeLists.txt  README.md  main_cpu.cpp  main_gpu.cu  run.bat  test_array3d.cu
cpu_version/include/: d2q9_bgk.h  types.h
cpu_version/src/: d2q9_bgk.cpp  utils.cpp
data/params/: evaluate.params
gpu_version/include/: array3d.cuh  constant.cuh  types.cuh  utils.cuh
gpu_version/src/: utils.cu
